# RAD-CoT-Refusal-Anchor-Distillation-for-Chain-of-Thought-Safety

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
data/: advbench.json  cot_hijacking_eval.json  flan_benign.json  hcot_eval.json  math_l4l5.json
outputs/validation/: validation_results.json
paper/: neurips_2026.sty  rad_cot_neurips2026.tex
rad_cot/: __init__.py
rad_cot/data/: calibration.py
rad_cot/evaluation/: benchmarks.py  judge.py  statistics.py
rad_cot/models/: hooks.py  model_loader.py
rad_cot/steering/: dms.py  soft_steering.py
rad_cot/utils/: config.py  logging.py
scripts/: benchmark_latency.py  download_datasets.py  exp1_causal_validation.py  exp2_safety_eval.py  exp3_reasoning_quality.py  exp4_generalisation.py  exp5_ablations.py  exp6_adaptive_attacks.py  run_all.py  run_dms_identification.py  run_validation.py
