[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rad-cot"
version = "0.1.0"
description = "RAD-CoT: Refusal-Anchor Distillation for Chain-of-Thought Safety"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "baukit @ git+https://github.com/davidbau/baukit.git",
    "scikit-learn>=1.3.0",
    "numpy",
    "pandas",
    "wandb>=0.16.0",
    "tqdm",
    "einops",
    "jaxtyping",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[tool.setuptools.packages.find]
include = ["rad_cot*"]

[tool.ruff]
line-length = 100
target-version = "py310"
